# cyder

./: .gitignore  CMakeLists.txt  DEPS  README.md  tspack.json
javascript/: tspack.json
javascript/built/: cyder.d.ts  main.js  test.js
javascript/src/: Main.ts
javascript/test/: Main.ts  Test.ts
scripts/: tsconfig.json  tspack.json
scripts/src/: AnimationFrame.ts  Console.ts  Entry.ts  Event.ts  EventEmitter.ts  Geometry.ts  Global.ts  Globals.ts  Map.ts  Types.ts
scripts/src/desktop/: NativeApplication.ts  NativeWindow.ts
scripts/src/display/: Canvas.ts  Canvas2DContextAttributes.ts  CanvasImageSource.ts  CanvasRenderingContext2D.ts  Image.ts  ImageData.ts
scripts/src/events/: EventEmitter.ts  IOErrorEvent.ts
scripts/src/filesystem/: WritableStream.ts
scripts/src/geom/: Matrix.ts  Point.ts  Rectangle.ts
scripts/src/net/: ImageLoader.ts
scripts/src/system/: Entry.ts  Performance.ts
scripts/src/utils/: Math.ts
scripts/test/: Main.ts
src/: Main.cpp
src/base/: DrawingBuffer.h  Environment.cpp  Environment.h  Globals.cpp  Globals.h  Macros.h  RenderingContext.h
src/binding/: AlignedValues.h  DebugAgent.cpp  DebugAgent.h  Environment.cpp  Environment.h  ExceptionMessages.cpp  ExceptionMessages.h  ExceptionState.cpp  ExceptionState.h  JSMain.cpp  JSMain.h  ObjectConstructor.cpp  ObjectConstructor.h  PerContextData.cpp  PerContextData.h  PerIsolateData.cpp  PerIsolateData.h  ScriptContext.cpp  ScriptContext.h  ScriptState.h  ScriptWrappable.cpp  ScriptWrappable.h  SetReturnValue.h  ThrowException.cpp  ThrowException.h  ToNative.cpp  ToNative.h  ToV8.cpp  ToV8.h  V8AnimationFrame.h  V8Application.cpp  V8Application.h  V8Binding.cpp  V8Binding.h  V8Canvas.cpp  V8Canvas.h  V8CanvasRenderingContext2D.cpp  V8CanvasRenderingContext2D.h  V8Configuration.cpp  V8Configuration.h  (+20 more)
src/binding/custom/: V8EventEmitterCustom.cpp
src/binding/internal/: Canvas.h  NativeWindow.cpp  NativeWindow.h  NativeWindowDelegate.cpp  NativeWindowDelegate.h
src/binding/v8/: V8AnimationFrame.cpp  V8AnimationFrame.h  V8Canvas.cpp  V8Canvas.h  V8CanvasRenderingContext2D.cpp  V8CanvasRenderingContext2D.h  V8Event.cpp  V8Event.h  V8EventEmitter.cpp  V8EventEmitter.h  V8EventListener.cpp  V8EventListener.h  V8Global.cpp  V8Global.h  V8Image.cpp  V8Image.h  V8ImageLoader.cpp  V8ImageLoader.h  V8NativeApplication.cpp  V8NativeApplication.h  V8NativeWindow.cpp  V8NativeWindow.h  V8Performance.cpp  V8Performance.h
src/binding/wrapper/: NativeWindow.cpp  NativeWindow.h
src/canvas/: Canvas.cpp  Canvas.h  ContextAttributes.cpp  ContextAttributes.h  RenderingContext.cpp  RenderingContext.h
src/canvas2d/: CanvasRenderingContext2D.cpp  CanvasRenderingContext2D.h  ImageBuffer.cpp  ImageBuffer.h  OffScreenBuffer.cpp  OffScreenBuffer.h
src/display/: CanvasImageSource.h  DrawingBuffer.h  Image.cpp  Image.h
src/modules/: Global.cpp  Global.h  NativeApplication.cpp  NativeApplication.h  NativeWindow.cpp  NativeWindow.h  Performance.cpp  Performance.h
src/modules/canvas/: DrawingBuffer.h  OffScreenBuffer.h
src/modules/canvas2d/: CanvasRenderingContext2D.cpp  CanvasRenderingContext2D.h
src/modules/events/: Event.cpp  Event.h  EventEmitter.cpp  EventEmitter.h  EventListener.h
src/modules/image/: Image.cpp  Image.h  ImageFormat.h
src/platform/: AnimationFrame.h  Application.h  GPUContext.h  GPUScreen.h  GPUSurface.h  Log.h  Socket.h  SurfaceFactory.h  Ticker.h  Window.h  WindowDelegate.h  WindowInitOptions.h  WindowSystemChrome.h  WindowType.h
src/platform/mac/: AppDelegate.h  AppDelegate.mm  GPUContext.h  GPUContext.mm  OSAnimationFrame.h  OSAnimationFrame.mm  OSApplication.h  OSApplication.mm  OSGPUContext.h  OSGPUContext.mm  OSScreen.h  OSScreen.mm  OSTicker.h  OSTicker.mm  (+9 more)
src/render/: GPURenderBuffer.cpp  GPURenderBuffer.h  RasterRenderBuffer.cpp  RasterRenderBuffer.h  RenderBuffer.cpp  RenderBuffer.h  RenderContext.cpp  RenderContext.h  SurfaceBuffer.cpp  SurfaceBuffer.h  WebGLBuffer.cpp  WebGLBuffer.h
src/rendering/: ImageBuffer.h  RenderingContext.h  SurfaceBuffer.h  WebGLBuffer.h
src/utils/: Base64.cpp  Base64.h  GetTimer.h  NumberUtil.h  ObjectPool.h  SkUnref.h  StringSplit.h  StringUtil.h  StringUtils.h  USE.h  WeakWrap.h  WeakWrapper.h
tools/: build_ts
(+2 files in other folders)
